p/themes/base-theme/frss.css
/* ... */
footer.main-footer {
	margin: 0 2rem 2rem;
	padding: 1rem;
	text-align: center;
}

/*=== Links */
a {
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

/*=== Lists */
ul, ol, dd {
	margin: 0;
	padding: 0;
}

ul.listInColumns {
	column-count: 5;
	column-width: 250px;
	max-width: 1700px;
}

ul.listInColumns li {
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
}

#tagsList {
	list-style: none;
}

/*=== Titles */
h1 {
	margin: 1rem 0 0.5rem;
	font-size: 1.6rem;
	line-height: 1.5;
}

h2 {
	margin: 0.5rem 0 0.25rem;
	font-size: 1.4rem;
	line-height: 1.5;
}

.api > h2 {
	text-align: center;
}

h2 .icon,
legend .icon {
	height: 0.8em;
	vertical-align: baseline;
}

h3 {
	margin: 0.5rem 0 0.25rem;
	font-size: 1.2rem;
	line-height: 1.5;
}

h4,
h5,
h6 {
	font-size: 1em;
}

.title_hidden {
	display: none;
}

.only-mobile {
	display: none !important;
}

/*=== Paragraphs */
p {
	margin: 1rem 0 0.5rem;
}

p.help, .prompt p.help {
	margin: 0.25rem 0 0.5rem;
	text-align: left;
}

p.help .icon {
	filter: brightness(2);
}

kbd {
	background-color: var(--frss-background-color-middle);
	padding: 0 0.5rem 0 0.5rem;
	display: inline-block;
	color: var(--frss-font-color-grey-dark);
	font-size: 0.9rem;
	border: 1px solid var(--frss-border-color);
	border-radius: 3px;
	white-space: pre-wrap;
	overflow-wrap: anywhere;
}

/*=== Images */
img {
	max-width: 100%;
	height: auto;
}

img.favicon {
	margin: 0 0.25rem 0 0;
	width: 1rem;
	height: 1rem;
	vertical-align: middle;
}

.content_thin figure,
.content_medium figure {
	margin: 8px 0px;
}

.content figure figcaption {
	font-style: italic;
}

.category .title.error::before,
.item.feed.error .item-title .title::before,
.box-content .item.feed.error .item-title::before {
	content: " ⚠ ";
	color: var(--frss-font-color-error);
}

.item.feed.mute .item-title .title::before,
.box .box-content .item.feed.mute .item-title::before {
	content: '🔇 ';
}

/*=== Videos */
audio, iframe, embed, object, video {
	max-width: 100%;
}

audio {
	width: 100%;
}

/*=== Forms */
fieldset {
	margin: 0;
	padding: 0;
	border: 0;
}

legend {
	display: block;
	width: 100%;
	clear: both;
}

label {
	display: block;
}

label.inline {
	display: inline-block;
}

label > span[title] {
	text-decoration: underline dotted;
}

input:not(.w50,.w100) {
	max-width: 90%;
	width: 300px;
}

input[type=number] {
	width: 6em;
}

textarea,
input[type="file"],
input.long {
	width: 300px;
}

input, select, textarea {
	display: inline-block;
	max-width: 100%;
	font-size: 0.8rem;
	box-sizing: border-box;
}

select {
	min-width: 6em;
}

input.w50,
select.w50,
textarea.w50 {
	min-width: 50%;
	box-sizing: border-box;
}

input.w100,
select.w100,
textarea.w100 {
	width: 100%;
	box-sizing: border-box;
}

.stick.w50 {
	width: 50%;
}

.stick.w100 {
	width: 100%;
}

.stick.w50 input,
.stick.w100 input {
	width: 100%;
}

.stick.w100 input + .btn {
	width: 29px;
	padding-left: 3px;
	padding-right: 3px;
	text-align: center;
}

textarea[rows="2"] {
	height: 4em;
}

textarea:invalid {
	border: 2px dashed var(--frss-border-color-error);
}

.prompt textarea,
.prompt input,
.prompt select,
.prompt .stick {
	margin: 5px auto;
	width: 100%;
	box-sizing: border-box;
}

input:disabled,
select:disabled {
	background-color: transparent;
	min-width: 75px;
	color: var(--frss-font-color-grey-light);
	font-style: italic;
	border: 1px dashed var(--frss-border-color);
}

input[type="radio"],
input[type="checkbox"] {
	min-width: auto;
	width: 15px !important;
	min-height: 15px !important;
}

.dropdown-menu label > input[type="text"] {
	width: 150px;
	width: calc(99% - 5em);
}

.dropdown-menu .item > a:hover,
.dropdown-menu .item > button:hover {
	text-decoration: none;
}

.dropdown-menu input[type="checkbox"] {
	margin-left: 1em;
	margin-right: 0.5rem;
	width: 1rem;
}

.dropdown-menu .item .checkboxNewTag {
	display: none;
}

.dropdown-menu .item label:not(.noHover):has(input[type="checkbox"]) {
	padding-left: 2.5rem;
	text-indent: -2.5rem;
}

.dropdown-menu .item.addItem {
	padding: 0 0.5em;
}

.dropdown-menu .item.addItem .stick {
	width: 100%
}

.dropdown-menu .item.addItem .stick input[type=text] {
	width: 100%;
}

button.as-link,
button.as-link:hover,
button.as-link:active {
	background: transparent;
	color: inherit;
	font-family: inherit;
	font-size: inherit;
	border: none;
	cursor: pointer;
	text-align: left;
	line-height: inherit;
}

button.as-link[disabled] {
	color: var(--frss-font-color-grey-light) !important;
}

/*=== Tables */
.table-wrapper {
	overflow-x: auto;
}

table {
	margin: 0.5rem 0;
	max-width: 100%;
}

th, td {
	padding: 0.5rem;
}

th.numeric,
td.numeric {
	text-align: center;
}

/*=== COMPONENTS */

/* prompt: login + register form + alert message banner */
.prompt {
	text-align: center;
}

.prompt form {
	margin-top: 2rem;
	text-align: left;
}

.prompt label,
.prompt .help {
	text-align: left;
}

.prompt input,
.prompt select,
.prompt .stick {
	width: 100%;
	box-sizing: border-box;
}

.prompt p {
	margin: 20px 0;
}

/*=== Forms */
.form-group::after {
	content: "";
	display: block;
	clear: both;
}

.form-group.form-actions {
	position: sticky;
	bottom: 0;
	backdrop-filter: blur(2px) grayscale(1);
	min-width: 250px;
	z-index: 80;
}

.form-group .group-name {
	display: block;
	float: left;
	width: 200px;
	text-align: right;
}

.form-group .group-controls {
	min-width: 200px;
	margin: 0 0 0 220px;
	overflow-x: auto;
}

.form-group .group-controls .control {
	display: block;
}

.form-advanced-title {
	padding: 15px 0;
	width: 200px;
	font-weight: bold;
	text-align: right;
	cursor: pointer;
}

@supports (position: sticky) {
	#mark-read-aside {
		position: sticky;
		top: 0;
	}
}

/*=== Buttons */
button[disabled]:hover {
	cursor: not-allowed;
}

.stick,
.group {
	display: inline-flex;
	max-width: 100%;
	white-space: nowrap;
	vertical-align: middle;
}

.stick > input {
	margin-top: 0;
	margin-bottom: 0;
}

.stick > input.long {
	flex-shrink: 1;
}
/* ... */

